--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,46 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
+.custom-footer{
+  background-color: rgb(108, 154, 108);
+  /* position: fixed;
+  bottom: 0px;
+  width: 100%; */
+}
+
+
+.custom-header{
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+
+.base-bg-color{
+  background-color: rgb(108, 154, 108);
+}
+
+.base-color{
+  color: rgb(108, 154, 108);
+}
+.carousel-inner {
+  padding: 0 50px !important;
 }
