--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,11 @@ main {
     height: 60px;
   }
 }
+
+
+.product-image {
+  width: 100%; /* Full width of the container */
+  height: 200px; /* Fixed height */
+  object-fit: cover; /* Maintain aspect ratio and crop if necessary */
+  /*border-radius: 10px;  Optional: Rounded corners */
+}
